--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [ master ]
     
-
 jobs:
   deploy:
 
@@ -18,7 +17,7 @@ jobs:
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
         jekyll/builder:latest /bin/bash -c "chmod 777 /srv/jekyll \
         && jekyll build --future" \
-        && cd /srv/jekyll/_site \
+        && cd ./_site \
         && git remote add origin git@github.com:brakmic-aleksandar/brakmic-aleksandar.github.io \
         && git commit -m "update" \
         && git push --set-upstream origin master --force
