--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -18,6 +18,7 @@ jobs:
         jekyll/builder:latest /bin/bash -c "chmod 777 /srv/jekyll \
         && jekyll build --future" \
         && cd ./_site \
+        && git init \
         && git remote add origin git@github.com:brakmic-aleksandar/brakmic-aleksandar.github.io \
         && git commit -m "update" \
         && git push --set-upstream origin master --force
