--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -19,6 +19,7 @@ jobs:
         && jekyll build --future" \
         && cd ./_site \
         && git init \
+        && chmod 777 ./git \
         && git remote add origin git@github.com:brakmic-aleksandar/brakmic-aleksandar.github.io \
         && git commit -m "update" \
         && git push --set-upstream origin master --force
