--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -28,7 +28,7 @@ jobs:
         echo "copied"
         cd ./_site 
         echo "cd"
-        git add target
+        git add
         echo "add"
         git commit -m "auto publish" 
         echo "commit"
