--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -26,7 +26,7 @@ jobs:
         git config --global user.email "brakmic.aleksandar@gmail.com"
         git config --global user.name "Auto publisher"
         echo "cloned"
-        cp -R ./_site/ ./target 
+        cp -ap ./_site/. ./target 
         echo "copied"
         cd ./target 
         echo "cd"
